--- a/Documentation.ipynb
+++ b/Documentation.ipynb
@@ -22,6 +22,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...........................................\n",
+    "\n",
+    "HyperGeometric Probability Distribution\n",
+    "\n",
+    "hypergeo(K, k, N, n)\n",
+    "\n",
+    "N = No. of items in the population\n",
+    "\n",
+    "n = No. of items in the sample\n",
+    "\n",
+    "K = No. of successes in the population\n",
+    "\n",
+    "k = No. of successes in the sample\n",
+    "\n",
+    "..........................................."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
